src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/C4A33.cd
/* (c) https://github.com/MontiCore/monticore */

package de.monticore.umlcd4a.cocos.ebnf.invalid;

classdiagram C4A33 {
  interface A1;
  interface B1;
  association A1 -> (foo) B1 [1];

  class A2 implements A1;
  association A2 -> (foo) B1 [1]; // not ok, because the association role `foo` is already inherited, so it
                                  // must be defined as derived
}
